This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.6.6 - not released yet
========================
+ Miscellaneous: Added button to export key bindings.
+ Formats: The spacebar can now be used to enable/disable formats.
* Updated FFmpeg (n0.8-16973-g55b243c)
* Updated Simplified Chinese translation
* More resilient support for MPL2 and SRT subtitles formats:
  - Ticket #2779, Support MicroDVD tags in MPL2 subtitles files. This is normally not
    supported but MPL2 files that use MicroDVD tags for formating are quite common.
  - Support SRT files with missing millisecond part in the timecodes.